Добавлен вывод задач для швей по типу задач .